# augment-agent

./: .agent.md  Cargo.toml
src/: autocmds.rs  buffer.rs  chat.rs  code_extractor.rs  commands.rs  error.rs  lib.rs  lua_utils.rs  state.rs
