[package]
name = "augment_agent"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
mlua = { version = "0.10.5", features = ["luajit", "module", "macros", "async"] }
nvim-oxi = { version = "0.6.0", features = ["neovim-0-11"] }
once_cell = "1.21.3"
serde = { version = "1.0.219", features = ["derive"] }
shell-escape = "0.1.5"
thiserror = "2.0.12"
